2012-05-28 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Avoid memory leak.
	* Source/CFURL.c: Correctly copy file system path.
	* Source/CFBase.c: Do a memory copy of the context.
	* Source/CFCharacterSet.c: Correctly calculate string length.
	* Tests/CFCharacterSet/basic.m: New tests.

2012-05-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c:
	* Source/CFURL.c:
	* Source/CFString.c:
	* Source/CFCalendar.c:
	* Source/CFAttributedString.c:
	* Source/CFLocale.c:
	* Source/CFDateFormatter.c:
	* Source/CFXMLParser.c:
	* Source/CFURLAccess.c: Fix some bugs found by static analyzer.
	* Source/NSCFError.m: Avoid compiler warnings.

2012-05-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFType.m: Remove unneede call to Objective-C runtime.
	* Source/CFCalendar.c:
	* Source/CFLocale.c:
	* Source/CFDateFormatter.c:
	* Source/CFStringUtilities.c:
	* Source/CFNumberFormatter.c:
	* Source/GSPrivate.h: Modify function to get the locale as a C string.
	* Source/CFArray.c: Allocate the correct amount of memory.
	* Tests/CFTree/basic.m: Fix premature call to release.
	* Tests/CFURL/create.m: Mark test as hopeful.
	* configure.ac:
	* configure: Remove option to build without ICU.
	* autom4te.cache/: Remove.

2012-05-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c:
	* Source/CFURL.c:
	* Tests/CFLocale/displayvalues.m:
	* Tests/CFTimeZone/general.m:
	* Tests/CFURL/create.m: CoreFoundation compatibility fixes.

2012-05-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Correctly set resource specifier location.
	* Tests/CFURL/create.m: Add test.

2012-05-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSFunctions.c: Fixed bug in GSBSearch ().
	* Source/CFAttributedString.c: Implemented mutable attributed strings.
	* Tests/CFAttributedString/mutable.m: New tests.

2012-05-06 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSFunctions.c: (GSBSearch) Return index of array item
	including value.